--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kontenbase/sdk": "0.8.10",
+    "axios": "0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
