fix: try homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-kontenbase",
   "private": true,
   "version": "0.1.0",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
